--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="card">
             
                 <div class="card__header card__imagem">
-                    <img src="/imagens/imagem-todolist.png" alt="lista de tarefas">
+                    <img src="imagens/imagem-todolist.png" alt="lista de tarefas">
                 </div>
 
                 <div class="card__body">
@@ -114,7 +114,7 @@
         <div class="card">
             
                 <div class="card__header card__imagem">
-                    <img src="/imagens/imagem-capa-portfolio.png" alt="imagem portifolio">
+                    <img src="imagens/imagem-capa-portfolio.png" alt="imagem portifolio">
                 </div>
 
                 <div class="card__body">
